--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
         <h3>
 <a id="what-is-libmonda" class="anchor" href="#what-is-libmonda" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>What is libmonda?</h3>
 
-<p><code>libmonda</code> is a library that provides improved support for the OCaml language in platform debuggers.  The majority of the library is designed to be independent of the particular debugger in use.  Currently the only supported debugger is gdb but it is expected that lldb support will be implemented in due course.</p>
+<p>libmonda is a library that provides improved support for the OCaml language in platform debuggers.  The majority of the library is designed to be independent of the particular debugger in use.  Currently the only supported debugger is gdb but it is expected that lldb support will be implemented in due course.</p>
+
+<p>Using gdb to debug OCaml programs is especially useful for the debugging of multi-threaded or low-level systems programs.</p>
 
 <h3>
 <a id="installation" class="anchor" href="#installation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installation</h3>
@@ -39,20 +41,39 @@
 <p>To use libmonda to debug OCaml programs it is necessary to have installed:</p>
 
 <ul>
-<li>the OPAM switch <code>4.05.0+monda</code> (this currently requires adding <code>github.com/mshinwell/opam-repo-dev</code> as an OPAM remote);</li>
-<li>the <code>libmonda-gdb</code> package (likewise).</li>
+<li>the OPAM switch 4.05.0+monda (this currently requires adding github.com/mshinwell/opam-repo-dev as an OPAM remote);</li>
+<li>the libmonda-gdb package (likewise).</li>
 </ul>
 
-<p>Installation of <code>libmonda-gdb</code> will also install a bespoke version of gdb with modifications for debugging OCaml code.  This version of gdb is called using the <code>gdb-ocaml</code> command.  It is not possible to use <code>libmonda</code> with a standard version of gdb.  (The modifications to gdb will be submitted upstream in due course.)</p>
+<p>Installation of libmonda-gdb will also install a bespoke version of gdb with modifications for debugging OCaml code.  This version of gdb is called using the gdb-ocaml command.  It is not possible to use libmonda with a standard version of gdb.  (The modifications to gdb will be submitted upstream in due course.)</p>
 
 <h3>
 <a id="using-gdb-to-debug-ocaml-code" class="anchor" href="#using-gdb-to-debug-ocaml-code" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Using gdb to debug OCaml code</h3>
 
-<p>gdb is invoked in the same way as normal except that <code>gdb-ocaml</code> is written instead of <code>gdb</code>.  A convenient method is using the <code>--args</code> option, like so:
+<p>gdb is invoked in the same way as normal except that gdb-ocaml is written instead of gdb.  A convenient method is using the --args option, like so:
     gdb-ocaml --args ./myprogram --hello world</p>
 
 <h2>
 <a id="standard-gdb-commands" class="anchor" href="#standard-gdb-commands" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Standard gdb commands</h2>
+
+<p>The following gdb commands (and many others) should operate as normal:</p>
+
+<ul>
+<li>run - start program's execution</li>
+<li>continue - continue program's execution after a breakpoint, etc.</li>
+<li>step - single-step</li>
+<li>next - single-step, but step over function calls</li>
+<li>finish - run until the current function returns (this won't correctly print the return value)</li>
+<li>break / enable / disable / info break - manage breakpoints</li>
+<li>info locals - show local variables (including free variables captured by closures)</li>
+<li>info args - show arguments of the current function</li>
+<li>backtrace - display current stack backtrace</li>
+<li>up / down - select stack frame for examination</li>
+<li>info threads - show active threads</li>
+<li>thread - switch between threads</li>
+<li>print - examine values</li>
+<li>disassemble - print disassembly (calls to OCaml functions will have proper names)</li>
+</ul>
 
 <h1>
 <a id="syntax-of-print-commands" class="anchor" href="#syntax-of-print-commands" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Syntax of "print" commands</h1>
@@ -60,7 +81,7 @@
 <p>The <code>print</code> command understands a small language of <em>paths</em> which enables the navigation of structured OCaml values.  A path either:</p>
 
 <ul>
-<li>starts with a module path (e.g. <code>Foo.Bar</code>) which identifies that the remainder of the path is a request for some toplevel value within the given module; or</li>
+<li>starts with a module path (e.g. "Foo.Bar") which identifies that the remainder of the path is a request for some toplevel value within the given module; or</li>
 <li>starts with the name of a local variable or function argument currently in scope (e.g. "myvar").  (This includes free variables of functions captured by closures.)
 Paths may be continued by either:</li>
 <li>giving the name of a record field (e.g. ".myfield"); or</li>
@@ -69,19 +90,22 @@ Numeric indexes may be applied to:</li>
 <li>arrays (to retrieve the nth element);</li>
 <li>lists (to retrieve the nth element);</li>
 <li>boxed constructed values (to retrieve the nth argument of the constructor---this works for "traditional" tupled constructors as well as those using inlined records);</li>
-<li>
-<code>ref</code> cells (to retrieve the contents; only the index <code>0</code> is valid).
+<li>"ref" cells (to retrieve the contents; only the index 0 is valid).
 Some examples of paths might be:</li>
-<li>
-<code>Foo.Bar.myvar.(0).blah</code>: find the toplevel value <code>myvar</code> in the module <code>Foo.Bar</code>, extract the first component and then extract the record field named <code>blah</code>;</li>
-<li>
-<code>arg.bar.baz</code>: find the local variable or argument named <code>arg</code> and then perform record field accesses <code>bar</code> then <code>baz</code>.</li>
+<li>"foo": find the local variable or argument named "foo" in the current function</li>
+<li>"Foo.Bar.myvar.(0).blah": find the toplevel value "myvar" in the module "Foo.Bar", extract the first component and then extract the record field named <code>blah</code>;</li>
+<li>"arg.bar.baz": find the local variable or argument named "arg" and then perform record field accesses "bar" then "baz".</li>
 </ul>
 
-<p>Error reporting in the debugger is currently rather primitive.  A message such as <code>$2 = 0</code> indicates that an error occurred when locating a value or traversing the given path.  Check that the name is correct and the path valid.  It can be helpful to use <code>info args</code> or <code>info locals</code> for this.</p>
+<p>Error reporting in the debugger is currently rather primitive.  A message such as "$2 = 0" indicates that an error occurred when locating a value or traversing the given path.  Check that the name is correct and the path valid.  It can be helpful to use <code>info args</code> or <code>info locals</code> for this.</p>
 
 <h2>
 <a id="ocaml-only-gdb-commands" class="anchor" href="#ocaml-only-gdb-commands" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>OCaml-only gdb commands</h2>
+
+<h2>
+<a id="spaceemacs-integration" class="anchor" href="#spaceemacs-integration" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>{Space,E}macs integration</h2>
+
+<p>There is somewhat embryonic support for running gdb-ocaml from within Spacemacs and Emacs in the normal gdb mode.  (Type ":gdb" in Spacemacs.)</p>
       </section>
     </div>
 
